style.css
/* ... */
/* Ensures the PERMALINK link is not displayed if we have a READ MORE link*/
.read_more_container + .permalink-container {
  display: none;
}

@media screen and (min-width: 850px) and (max-width: 1499px) {
  .post-icon {
    text-align: right;
    margin-top: 1.35rem;
  }
  .post-icon.icon-text {
    margin-top: 1.55rem;
  }
  .read_more_container, .permalink-container {
    text-align: right;
    position: absolute;
    right: 12.33333333%;
  }
}
/* Post styles end */

/* Pagination styles */
ul.pagination {
  display: inline-block;
  list-style-type: none;
  padding: 0.2rem;
}
.pagination li {
  display: inline-block;
}
.pagination.row {
  text-align: center;
}
.pagination a {
  text-decoration: none;
  display: inline-block;
}
.pagination a, .current-page {
  padding: 1rem;
}
li.jump-page, li.current-page {
  display: none;
}
@media screen and (min-width: 850px) {
  li.jump-page {
    display: inline;
  }
  li.current-page {
    display: inline-block;
  }
  .pagination a, .current-page {
    padding: 0 0.4rem 0.1rem;
  }

}
/* Pagination styles end*/

/* Displays only the first of each call-to-action */
h4.store, h4.prerelease {
  display: none;
  color: #fff;
}
h4.store:first-child, h4.prerelease:first-child {
  display: block;
}

.store-links a:link, .prerelease-links a:link {
  display: block;
}

/* Workaround for custom Tumblr like button */
/* http://stackoverflow.com/a/21715659/800492 */
.custom-like-button {
  position: relative;
  display: block;
  float: left;
  width: 22px;
  height: 20px;
  cursor: pointer;
  top: 3px;
}
.like_button {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  z-index: 10;
}
.like_button iframe {
  width: 100% !important;
  height: 100% !important;
}
.custom-button {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}
/* Custom like button hover and active states */
.like_button:hover + .custom-button:before, .share span:hover, .share label:hover {
  opacity: 0.75;
}
.like_button.liked + .custom-button:before, .like_button:hover.liked + .custom-button:before, .social-share-toggle:checked + label, .share a:active span {
  opacity: 1;
}

